# dino-park-whoami

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  do.sh  myke.yml
ci/: install_deps.sh
dev/: docker-compose.yml  settings.json
k8s/: Chart.yaml  values.yaml
k8s/templates/: deployment.yaml  service.yaml
k8s/values/: dev.yaml  prod.yaml  test.yaml
proxy/: proxy.js
src/: error.rs  github.rs  healthz.rs  main.rs  settings.rs  update.rs  userid.rs
src/bugzilla/: app.rs
src/github/: app.rs
src/google/: app.rs
src/slack/: app.rs
terraform/codebuild/: main.tf  provider.tf  variables.tf
terraform/dev/: provider.tf  ssm.tf
terraform/prod/: provider.tf  ssm.tf
terraform/test/: provider.tf  ssm.tf
