[package]
name = "dino-park-whoami"
version = "0.2.7"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"

[features]
default = []
localuserscope = ["dino_park_gate/localuserscope"]

[dependencies]
cis_client = { git = "https://github.com/mozilla-iam/cis_client-rust", tag = "0.9.1", version = "0.9.1", features = ["sync"] }
cis_profile = { git = "https://github.com/mozilla-iam/cis_profile-rust", tag = "0.6.2", version = "0.6.2", features = ["aws", "vendored"] }
dino_park_gate = { git = "https://github.com/mozilla-iam/dino-park-gate", tag = "0.10.8", version = "0.10.8" }
dino_park_guard = { git = "https://github.com/mozilla-iam/dino-park-guard", tag = "0.5.7", version = "0.5.7" }
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", tag = "0.1.1", version = "0.1.1" }
shared-expiry-get = "0.1.0"
actix-web = "4.10.2"
actix-session = "0.5"
futures = "0.3"
oauth2 = { version = "3", features = ["futures-03", "reqwest-010"], default-features = false }
url = "2.1"
base64 = "0.12"
rand = "0.7"
failure = "0.1"
config = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.32"
chrono = "0.4.38"
env_logger = "0.7"
log = "0.4"
ttl_cache = "0.5"
reqwest = { version = "0.11", features = ["json"] }
